--- a/package.json
+++ b/package.json
@@ -60,7 +60,11 @@
     "jest": "^28.1.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "readline": "^1.3.0",
     "rollup": "^2.75.7",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "picocolors": "^1.0.0"
   }
 }
