--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "axios": "^0.27.2",
     "babel-jest": "^28.1.0",
     "chalk": "^5.0.1",
     "cross-env": "^7.0.3",
