--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@types/ejs": "^3.1.1",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
@@ -51,6 +52,7 @@
     "babel-jest": "^28.1.0",
     "chalk": "^5.0.1",
     "cross-env": "^7.0.3",
+    "ejs": "^3.1.8",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.2",
