--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@babel/core": "^7.17.12",
     "@babel/preset-env": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "@types/ejs": "^3.1.1",
     "@types/jest": "^27.5.1",
@@ -50,6 +52,7 @@
     "@typescript-eslint/parser": "^5.23.0",
     "axios": "^0.27.2",
     "babel-jest": "^28.1.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "chalk": "^5.0.1",
     "cross-env": "^7.0.3",
     "ejs": "^3.1.8",
@@ -65,9 +68,10 @@
     "prettier": "^2.6.2",
     "readline": "^1.3.0",
     "rollup": "^2.75.7",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "picocolors": "^1.0.0",
     "typescript": "^4.5.4"
   },
-  "dependencies": {
-    "picocolors": "^1.0.0"
-  }
+  "dependencies": {}
 }
