--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ejs": "^3.1.8",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
+    "eslint-config-jsy": "^1.0.4",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-n": "^15.0.0",
